[tool.poetry]
name = "async_lru-stubs"
version = "1.0.2"
description = "Type stubs for async-lru"
authors = ["StockerMC"]
license = "MIT"
packages = [{ include = "async_lru.pyi" }]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
"async-lru" = { git = "https://github.com/aio-libs/async-lru", branch = "master" }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
